Added cargo to makefile

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ build
 src/defi
 src/defid
 src/defi-cli
+src/defi-rust-cli
 src/defi-tx
 src/defi-wallet
 src/test/test_defi
@@ -132,3 +133,7 @@ dist/
 
 # VSCode extension LocalHistory
 .history
+
+# Added by cargo
+
+src/rust-cli/target
