--- a/src/rust-cli/Cargo.toml
+++ b/src/rust-cli/Cargo.toml
@@ -8,4 +8,5 @@ authors = [
 description = "DeFichain RPC client"
 
 [dependencies]
+bitcoincore-rpc = "0.13.0"
 clap = { version = "2.33.3", features = ["yaml"] }
