--- a/Makefile.am
+++ b/Makefile.am
@@ -12,13 +12,13 @@ endif
 export PYTHONPATH
 
 CARGO_BUILD=cargo build $(CARGOFLAGS)
-DEFI_RUST_CLI_DIR = $(top_srcdir)/src/rust-cli
+DEFI_CLI_V2_DIR = $(top_srcdir)/src/rust/cli
 if ENABLE_DEBUG
-DEFI_RUST_CLI_BIN_DIR = debug
+DEFI_CLI_V2_BIN_DIR = debug
 else
-DEFI_RUST_CLI_BIN_DIR = release
+DEFI_CLI_V2_BIN_DIR = release
 endif
-DEFI_RUST_CLI_TARGET_DIR = $(DEFI_RUST_CLI_DIR)/target
+DEFI_CLI_V2_TARGET_DIR = $(DEFI_CLI_V2_DIR)/target
 
 
 if BUILD_DEFI_LIBS
@@ -28,7 +28,7 @@ endif
 
 DEFID_BIN=$(top_builddir)/src/$(DEFI_DAEMON_NAME)$(EXEEXT)
 DEFI_CLI_BIN=$(top_builddir)/src/$(DEFI_CLI_NAME)$(EXEEXT)
-DEFI_RUST_CLI_BIN=$(top_builddir)/src/$(DEFI_RUST_CLI_NAME)$(EXEEXT)
+DEFI_CLI_V2_BIN=$(DEFI_CLI_V2_DIR)/$(DEFI_CLI_V2_NAME)$(EXEEXT)
 DEFI_TX_BIN=$(top_builddir)/src/$(DEFI_TX_NAME)$(EXEEXT)
 DEFI_WALLET_BIN=$(top_builddir)/src/$(DEFI_WALLET_TOOL_NAME)$(EXEEXT)
 DEFI_WIN_INSTALLER=$(PACKAGE)-$(PACKAGE_VERSION)-win$(WINDOWS_BITS)-setup$(EXEEXT)
@@ -189,15 +189,21 @@ $(DEFID_BIN): FORCE
 $(DEFI_CLI_BIN): FORCE
 	$(MAKE) -C src $(@F)
 
-$(DEFI_RUST_CLI_BIN): FORCE
-	$(CARGO_BUILD) --manifest-path $(DEFI_RUST_CLI_DIR)/Cargo.toml
-	cp -p $(DEFI_RUST_CLI_TARGET_DIR)/$(DEFI_RUST_CLI_BIN_DIR)/$(DEFI_RUST_CLI_NAME) $(DEFI_RUST_CLI_BIN)
+$(DEFI_CLI_V2_BIN): FORCE
+	$(CARGO_BUILD) --manifest-path $(DEFI_CLI_V2_DIR)/Cargo.toml
+	cp -p $(DEFI_CLI_V2_TARGET_DIR)/$(DEFI_CLI_V2_BIN_DIR)/$(DEFI_CLI_NAME) $(top_srcdir)/src/$(DEFI_CLI_NAME)
 
 $(DEFI_TX_BIN): FORCE
 	$(MAKE) -C src $(@F)
 
 $(DEFI_WALLET_BIN): FORCE
 	$(MAKE) -C src $(@F)
+
+if ENABLE_CLI_V2
+defi-cli: $(DEFI_CLI_V2_BIN)
+else
+defi-cli: $(DEFI_CLI_BIN)
+endif
 
 if USE_LCOV
 LCOV_FILTER_PATTERN=-p "/usr/include/" -p "/usr/lib/" -p "src/leveldb/" -p "src/bench/" -p "src/univalue" -p "src/crypto/ctaes" -p "src/secp256k1"
@@ -328,11 +334,11 @@ endif
 clean-docs:
 	rm -rf doc/doxygen
 
-clean-rust-cli:
-	rm -rf $(DEFI_RUST_CLI_TARGET_DIR)
-	rm -rf $(DEFI_RUST_CLI_BIN)
+clean-cli-v2:
+	rm -rf $(DEFI_CLI_V2_TARGET_DIR)
+	rm -rf $(top_srcdir)/src/$(DEFI_CLI_NAME)
 
-clean-local: clean-docs clean-rust-cli
+clean-local: clean-docs clean-cli-v2
 	rm -rf coverage_percent.txt test_defi.coverage/ total.coverage/ test/tmp/ cache/ $(OSX_APP)
 	rm -rf test/functional/__pycache__ test/functional/test_framework/__pycache__ test/cache share/rpcauth/__pycache__
 	rm -rf osx_volname dist/ dpi36.background.tiff dpi72.background.tiff
