--- a/configure.ac
+++ b/configure.ac
@@ -19,9 +19,9 @@ DEFI_DAEMON_NAME=defid
 DEFI_CLI_NAME=defi-cli
 DEFI_TX_NAME=defi-tx
 DEFI_WALLET_TOOL_NAME=defi-wallet
-DEFI_RUST_CLI_NAME=defi-rust-cli
 
 CARGOFLAGS=--release
+CLI_VERSION=1
 
 dnl Unless the user specified ARFLAGS, force it to be cr
 AC_ARG_VAR(ARFLAGS, [Flags for the archiver, defaults to <cr> if not set])
@@ -227,6 +227,18 @@ AC_ARG_ENABLE([debug],
     [enable_debug=$enableval],
     [enable_debug=no])
 AM_CONDITIONAL(ENABLE_DEBUG, test "$enable_debug" != no)
+
+# Enable cli-v2
+AC_ARG_ENABLE([cli-v2],
+    [AS_HELP_STRING([--enable-cli-v2],
+                    [Enable new cli version (default is no)])],
+    [enable_cli_v2=$enableval],
+    [enable_cli_v2=no])
+AM_CONDITIONAL(ENABLE_CLI_V2, test "$enable_cli_v2" != no)
+
+if test "x$enable_cli_v2" = xyes; then
+  CLI_VERSION=2
+fi
 
 # Enable different -fsanitize options
 AC_ARG_WITH([sanitizers],
@@ -434,11 +446,11 @@ AC_ARG_ENABLE([util-cli],
   [build_defi_cli=$enableval],
   [build_defi_cli=$build_defi_utils])
 
-AC_ARG_ENABLE([util-rust-cli],
-  [AS_HELP_STRING([--enable-defi-rust-cli],
-  [build defi-rust-cli])],
-  [build_defi_rust_cli=$enableval],
-  [build_defi_rust_cli=$build_defi_utils])
+AC_ARG_ENABLE([util-cli-v2],
+  [AS_HELP_STRING([--enable-defi-cli-v2],
+  [build defi-cli-v2])],
+  [build_defi_cli_v2=$enableval],
+  [build_defi_cli_v2=$build_defi_utils])
 
 AC_ARG_ENABLE([util-tx],
   [AS_HELP_STRING([--enable-util-tx],
@@ -946,7 +958,7 @@ if test "x$enable_fuzz" = "xyes"; then
   AC_MSG_WARN(enable-fuzz will disable all other targets)
   build_defi_utils=no
   build_defi_cli=no
-  build_defi_rust_cli=no
+  build_defi_cli_v2=no
   build_defi_tx=no
   build_defi_wallet=no
   build_defid=no
@@ -1297,9 +1309,9 @@ AC_MSG_CHECKING([whether to build defi-cli])
 AM_CONDITIONAL([BUILD_DEFI_CLI], [test x$build_defi_cli = xyes])
 AC_MSG_RESULT($build_defi_cli)
 
-AC_MSG_CHECKING([whether to build defi-rust-cli])
-AM_CONDITIONAL([BUILD_DEFI_RUST_CLI], [test x$build_defi_rust_cli = xyes])
-AC_MSG_RESULT($build_defi_rust_cli)
+AC_MSG_CHECKING([whether to build defi-cli-v2])
+AM_CONDITIONAL([BUILD_DEFI_CLI_V2], [test x$build_defi_cli_v2 = xyes])
+AC_MSG_RESULT($build_defi_cli_v2)
 
 AC_MSG_CHECKING([whether to build defi-tx])
 AM_CONDITIONAL([BUILD_DEFI_TX], [test x$build_defi_tx = xyes])
@@ -1437,7 +1449,6 @@ AC_SUBST(DEFI_DAEMON_NAME)
 AC_SUBST(DEFI_CLI_NAME)
 AC_SUBST(DEFI_TX_NAME)
 AC_SUBST(DEFI_WALLET_TOOL_NAME)
-AC_SUBST(DEFI_RUST_CLI_NAME)
 AC_SUBST(CARGOFLAGS)
 
 AC_SUBST(RELDFLAGS)
@@ -1559,4 +1570,5 @@ echo "  CXXFLAGS      = $DEBUG_CXXFLAGS $HARDENED_CXXFLAGS $WARN_CXXFLAGS $NOWAR
 echo "  LDFLAGS       = $PTHREAD_CFLAGS $HARDENED_LDFLAGS $GPROF_LDFLAGS $LDFLAGS"
 echo "  ARFLAGS       = $ARFLAGS"
 echo "  CARGOFLAGS    = $CARGOFLAGS"
+echo "  CLI_VERSION   = $CLI_VERSION"
 echo
